
syntax = "proto3";

package test.common.upstream;

import "buf/validate/validate.proto";
import "envoy/config/cluster/v3/cluster.proto";
import "test/extensions/load_balancing_policies/common/zone_aware_load_balancer_fuzz.proto";

message RoundRobinLoadBalancerTestCase {
  test.common.upstream.ZoneAwareLoadBalancerTestCase zone_aware_load_balancer_test_case = 1
      [(buf.validate.field).message.required = true];
  envoy.config.cluster.v3.Cluster.RoundRobinLbConfig round_robin_lb_config = 2;
}
